--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇦🇺 澳大利亚-2.75MB/s(Youtube:不良林), server: jgwxn4.gaox.ml, port: 443, type: trojan, password: e8c1ab3c-89b3-4933-92df-682e6dce7819, sni: jgwxn4.gaox.ml, skip-cert-verify: true}
-  - {name: 🇦🇺 澳大利亚-2.66MB/s(Youtube:不良林), server: jgwxn3.gaox.ml, port: 443, type: trojan, password: cb43b7c2-b744-41c5-bcc2-fd7467b332cf, sni: jgwxn3.gaox.ml, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-14.38MB/s(Youtube:不良林), server: 36.134.116.212, port: 45149, type: vmess, uuid: 60ee343c-6574-43ba-9f89-26ba2a154999, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 36.134.116.212}}
-  - {name: 🇷🇺 俄罗斯联邦-1.42MB/s(Youtube:不良林), server: 185.4.65.6, port: 21247, type: ss, cipher: aes-256-cfb, password: vDS9G2p}
-  - {name: 🇩🇪 德国-3.78MB/s(Youtube:不良林), server: mosaic.marythunt.xyz, port: 443, type: trojan, password: !<str> 372815193, sni: mosaic.marythunt.xyz, skip-cert-verify: true}
-  - {name: 🇰🇷 韩国-5.72MB/s(Youtube:不良林), server: kr04.wangxd.life, port: 3052, type: trojan, password: 3a2c0c6c-9ee5-c05f-c951-fcd73831983e, sni: kr04.wangxd.life, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-645.3KB/s(Youtube:不良林), server: 89.31.126.171, port: 800, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇺🇸 美国-5.10MB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
+  - {name: 🇸🇬 新加坡-3.51MB/s(Youtube:不良林), server: trojan2.udpgw.com, port: 443, type: trojan, password: 973ef350-f6a5-11ec-9274-1239d0255272, sni: trojan2.udpgw.com, skip-cert-verify: true}
+  - {name: 🇫🇷 法国-1.29MB/s(Youtube:不良林), server: 51.38.118.42, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇨🇳 中国-12.01MB/s(Youtube:不良林), server: 36.134.116.212, port: 45392, type: ss, cipher: chacha20-ietf-poly1305, password: 16a6617b-2c13-4473-9f8f-9606c9d9a0d4}
+  - {name: 🇺🇸 美国-4.74MB/s(Youtube:不良林), server: fhcamd2.gaox.ml, port: 443, type: trojan, password: dbf9bf9c-2c3f-474a-8031-d4c00666a989, sni: fhcamd2.gaox.ml, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-636.9KB/s(Youtube:不良林), server: 89.31.126.171, port: 800, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
   - {name: 🇷🇺 俄罗斯联邦-1.80MB/s(Youtube:不良林), server: 45.144.176.135, port: 3004, type: ss, cipher: aes-256-cfb, password: 3682oiuvefwwmbc1475}
-  - {name: 🇷🇺 俄罗斯联邦-1.77MB/s(Youtube:不良林), server: 45.144.176.135, port: 3003, type: ss, cipher: aes-256-cfb, password: werty33588761qwfdees}
+  - {name: 🇷🇺 俄罗斯联邦-1.64MB/s(Youtube:不良林), server: 45.144.176.135, port: 3003, type: ss, cipher: aes-256-cfb, password: werty33588761qwfdees}
   - {name: 🇺🇸 美国-3.58MB/s(Youtube:不良林), server: 20.123.187.212, port: 27931, type: vmess, uuid: 256eae41-0b8f-4faa-bce8-6366011dc19f, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-343.1KB/s(Youtube:不良林), server: jgwcc3.gaox.ml, port: 443, type: trojan, password: b291d129-ee55-4801-a9b8-b5316e5c37b7, sni: jgwcc3.gaox.ml, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇦🇺 澳大利亚-2.75MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.66MB/s(Youtube:不良林)
-      - 🇨🇳 中国-14.38MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.42MB/s(Youtube:不良林)
-      - 🇩🇪 德国-3.78MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-5.72MB/s(Youtube:不良林)
-      - 🇯🇵 日本-645.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.10MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.51MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.29MB/s(Youtube:不良林)
+      - 🇨🇳 中国-12.01MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.74MB/s(Youtube:不良林)
+      - 🇯🇵 日本-636.9KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-1.80MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.77MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.64MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.58MB/s(Youtube:不良林)
+      - 🇺🇸 美国-343.1KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇦🇺 澳大利亚-2.75MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.66MB/s(Youtube:不良林)
-      - 🇨🇳 中国-14.38MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.42MB/s(Youtube:不良林)
-      - 🇩🇪 德国-3.78MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-5.72MB/s(Youtube:不良林)
-      - 🇯🇵 日本-645.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.10MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.51MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.29MB/s(Youtube:不良林)
+      - 🇨🇳 中国-12.01MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.74MB/s(Youtube:不良林)
+      - 🇯🇵 日本-636.9KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-1.80MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.77MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.64MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.58MB/s(Youtube:不良林)
+      - 🇺🇸 美国-343.1KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇦🇺 澳大利亚-2.75MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.66MB/s(Youtube:不良林)
-      - 🇨🇳 中国-14.38MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.42MB/s(Youtube:不良林)
-      - 🇩🇪 德国-3.78MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-5.72MB/s(Youtube:不良林)
-      - 🇯🇵 日本-645.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.10MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.51MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.29MB/s(Youtube:不良林)
+      - 🇨🇳 中国-12.01MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.74MB/s(Youtube:不良林)
+      - 🇯🇵 日本-636.9KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-1.80MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.77MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.64MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.58MB/s(Youtube:不良林)
+      - 🇺🇸 美国-343.1KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇦🇺 澳大利亚-2.75MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.66MB/s(Youtube:不良林)
-      - 🇨🇳 中国-14.38MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.42MB/s(Youtube:不良林)
-      - 🇩🇪 德国-3.78MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-5.72MB/s(Youtube:不良林)
-      - 🇯🇵 日本-645.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.10MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.51MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.29MB/s(Youtube:不良林)
+      - 🇨🇳 中国-12.01MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.74MB/s(Youtube:不良林)
+      - 🇯🇵 日本-636.9KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-1.80MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.77MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.64MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.58MB/s(Youtube:不良林)
+      - 🇺🇸 美国-343.1KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇦🇺 澳大利亚-2.75MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.66MB/s(Youtube:不良林)
-      - 🇨🇳 中国-14.38MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.42MB/s(Youtube:不良林)
-      - 🇩🇪 德国-3.78MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-5.72MB/s(Youtube:不良林)
-      - 🇯🇵 日本-645.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.10MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.51MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.29MB/s(Youtube:不良林)
+      - 🇨🇳 中国-12.01MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.74MB/s(Youtube:不良林)
+      - 🇯🇵 日本-636.9KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-1.80MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.77MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.64MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.58MB/s(Youtube:不良林)
+      - 🇺🇸 美国-343.1KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇦🇺 澳大利亚-2.75MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.66MB/s(Youtube:不良林)
-      - 🇨🇳 中国-14.38MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.42MB/s(Youtube:不良林)
-      - 🇩🇪 德国-3.78MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-5.72MB/s(Youtube:不良林)
-      - 🇯🇵 日本-645.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.10MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.51MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.29MB/s(Youtube:不良林)
+      - 🇨🇳 中国-12.01MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.74MB/s(Youtube:不良林)
+      - 🇯🇵 日本-636.9KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-1.80MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.77MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.64MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.58MB/s(Youtube:不良林)
+      - 🇺🇸 美国-343.1KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇦🇺 澳大利亚-2.75MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.66MB/s(Youtube:不良林)
-      - 🇨🇳 中国-14.38MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.42MB/s(Youtube:不良林)
-      - 🇩🇪 德国-3.78MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-5.72MB/s(Youtube:不良林)
-      - 🇯🇵 日本-645.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.10MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.51MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.29MB/s(Youtube:不良林)
+      - 🇨🇳 中国-12.01MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.74MB/s(Youtube:不良林)
+      - 🇯🇵 日本-636.9KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-1.80MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.77MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.64MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.58MB/s(Youtube:不良林)
+      - 🇺🇸 美国-343.1KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
