--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,114 +5,115 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-5.10MB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
-  - {name: 🇸🇬 新加坡-3.51MB/s(Youtube:不良林), server: trojan2.udpgw.com, port: 443, type: trojan, password: 973ef350-f6a5-11ec-9274-1239d0255272, sni: trojan2.udpgw.com, skip-cert-verify: true}
-  - {name: 🇫🇷 法国-1.29MB/s(Youtube:不良林), server: 51.38.118.42, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇨🇳 中国-12.01MB/s(Youtube:不良林), server: 36.134.116.212, port: 45392, type: ss, cipher: chacha20-ietf-poly1305, password: 16a6617b-2c13-4473-9f8f-9606c9d9a0d4}
-  - {name: 🇺🇸 美国-4.74MB/s(Youtube:不良林), server: fhcamd2.gaox.ml, port: 443, type: trojan, password: dbf9bf9c-2c3f-474a-8031-d4c00666a989, sni: fhcamd2.gaox.ml, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-636.9KB/s(Youtube:不良林), server: 89.31.126.171, port: 800, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇷🇺 俄罗斯联邦-1.80MB/s(Youtube:不良林), server: 45.144.176.135, port: 3004, type: ss, cipher: aes-256-cfb, password: 3682oiuvefwwmbc1475}
-  - {name: 🇷🇺 俄罗斯联邦-1.64MB/s(Youtube:不良林), server: 45.144.176.135, port: 3003, type: ss, cipher: aes-256-cfb, password: werty33588761qwfdees}
-  - {name: 🇺🇸 美国-3.58MB/s(Youtube:不良林), server: 20.123.187.212, port: 27931, type: vmess, uuid: 256eae41-0b8f-4faa-bce8-6366011dc19f, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-343.1KB/s(Youtube:不良林), server: jgwcc3.gaox.ml, port: 443, type: trojan, password: b291d129-ee55-4801-a9b8-b5316e5c37b7, sni: jgwcc3.gaox.ml, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-8.51MB/s(Youtube:不良林), server: 116.129.254.65, port: 63004, type: vmess, uuid: 352ba93c-fd92-3055-ad10-b3599ff2802f, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 116.129.254.65}}
+  - {name: 🇺🇸 美国-5.04MB/s(Youtube:不良林), server: 95.169.4.174, port: 254, type: ss, cipher: aes-256-cfb, password: bwhskrskr06}
+  - {name: 🇮🇳 印度-897.7KB/s(Youtube:不良林), server: jgwhdlb1.gaox.ml, port: 443, type: trojan, password: e05c749b-7c6b-41b8-9c71-9dcf685edf4a, sni: jgwhdlb1.gaox.ml, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-8.92MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 43960, type: vmess, uuid: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /j20-sp1, ws-headers: {Host: pp1.zhengzhongfeizhu.xyz}}
+  - {name: 🇨🇳 中国-329.1KB/s(Youtube:不良林), server: 159.27.90.254, port: 63087, type: vmess, uuid: 352ba93c-fd92-3055-ad10-b3599ff2802f, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /mugua, ws-headers: {Host: 159.27.90.254}}
+  - {name: 🇭🇰 香港-4.28MB/s(Youtube:不良林), server: 43.129.30.122, port: 12359, type: vmess, uuid: f78921c4-5a97-47ed-db4c-e88b799e6581, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇩🇪 德国-3.25MB/s(Youtube:不良林), server: mosaic.marythunt.xyz, port: 443, type: trojan, password: !<str> 372815193, sni: mosaic.marythunt.xyz, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-1.80MB/s(Youtube:不良林), server: v04.ssrsub.com, port: 153, type: vmess, uuid: 2df8cb33-de40-438c-840a-5f1d05fe7518, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /api/v3/download.getFile, ws-headers: {Host: v04.ssrsub.com}}
+  - {name: 🇺🇸 美国-2.07MB/s(Youtube:不良林), server: 150.230.43.106, port: 54829, type: vmess, uuid: f2b5c3ff-86c7-4efa-831f-ff0fcd7656a5, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-3.55MB/s(Youtube:不良林), server: 20.123.187.212, port: 27931, type: vmess, uuid: 256eae41-0b8f-4faa-bce8-6366011dc19f, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-5.10MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.51MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.29MB/s(Youtube:不良林)
-      - 🇨🇳 中国-12.01MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.74MB/s(Youtube:不良林)
-      - 🇯🇵 日本-636.9KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.80MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.64MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.58MB/s(Youtube:不良林)
-      - 🇺🇸 美国-343.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.51MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.04MB/s(Youtube:不良林)
+      - 🇮🇳 印度-897.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.92MB/s(Youtube:不良林)
+      - 🇨🇳 中国-329.1KB/s(Youtube:不良林)
+      - 🇭🇰 香港-4.28MB/s(Youtube:不良林)
+      - 🇩🇪 德国-3.25MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.80MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.07MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.55MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-5.10MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.51MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.29MB/s(Youtube:不良林)
-      - 🇨🇳 中国-12.01MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.74MB/s(Youtube:不良林)
-      - 🇯🇵 日本-636.9KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.80MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.64MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.58MB/s(Youtube:不良林)
-      - 🇺🇸 美国-343.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.51MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.04MB/s(Youtube:不良林)
+      - 🇮🇳 印度-897.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.92MB/s(Youtube:不良林)
+      - 🇨🇳 中国-329.1KB/s(Youtube:不良林)
+      - 🇭🇰 香港-4.28MB/s(Youtube:不良林)
+      - 🇩🇪 德国-3.25MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.80MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.07MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.55MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-5.10MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.51MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.29MB/s(Youtube:不良林)
-      - 🇨🇳 中国-12.01MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.74MB/s(Youtube:不良林)
-      - 🇯🇵 日本-636.9KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.80MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.64MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.58MB/s(Youtube:不良林)
-      - 🇺🇸 美国-343.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.51MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.04MB/s(Youtube:不良林)
+      - 🇮🇳 印度-897.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.92MB/s(Youtube:不良林)
+      - 🇨🇳 中国-329.1KB/s(Youtube:不良林)
+      - 🇭🇰 香港-4.28MB/s(Youtube:不良林)
+      - 🇩🇪 德国-3.25MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.80MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.07MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.55MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇭🇰 香港-4.28MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-5.10MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.51MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.29MB/s(Youtube:不良林)
-      - 🇨🇳 中国-12.01MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.74MB/s(Youtube:不良林)
-      - 🇯🇵 日本-636.9KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.80MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.64MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.58MB/s(Youtube:不良林)
-      - 🇺🇸 美国-343.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.51MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.04MB/s(Youtube:不良林)
+      - 🇮🇳 印度-897.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.92MB/s(Youtube:不良林)
+      - 🇨🇳 中国-329.1KB/s(Youtube:不良林)
+      - 🇭🇰 香港-4.28MB/s(Youtube:不良林)
+      - 🇩🇪 德国-3.25MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.80MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.07MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.55MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-5.10MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.51MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.29MB/s(Youtube:不良林)
-      - 🇨🇳 中国-12.01MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.74MB/s(Youtube:不良林)
-      - 🇯🇵 日本-636.9KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.80MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.64MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.58MB/s(Youtube:不良林)
-      - 🇺🇸 美国-343.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.51MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.04MB/s(Youtube:不良林)
+      - 🇮🇳 印度-897.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.92MB/s(Youtube:不良林)
+      - 🇨🇳 中国-329.1KB/s(Youtube:不良林)
+      - 🇭🇰 香港-4.28MB/s(Youtube:不良林)
+      - 🇩🇪 德国-3.25MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.80MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.07MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.55MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-5.10MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.51MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.29MB/s(Youtube:不良林)
-      - 🇨🇳 中国-12.01MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.74MB/s(Youtube:不良林)
-      - 🇯🇵 日本-636.9KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.80MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.64MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.58MB/s(Youtube:不良林)
-      - 🇺🇸 美国-343.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.51MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.04MB/s(Youtube:不良林)
+      - 🇮🇳 印度-897.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.92MB/s(Youtube:不良林)
+      - 🇨🇳 中国-329.1KB/s(Youtube:不良林)
+      - 🇭🇰 香港-4.28MB/s(Youtube:不良林)
+      - 🇩🇪 德国-3.25MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.80MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.07MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.55MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-5.10MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.51MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.29MB/s(Youtube:不良林)
-      - 🇨🇳 中国-12.01MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.74MB/s(Youtube:不良林)
-      - 🇯🇵 日本-636.9KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.80MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.64MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.58MB/s(Youtube:不良林)
-      - 🇺🇸 美国-343.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.51MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.04MB/s(Youtube:不良林)
+      - 🇮🇳 印度-897.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.92MB/s(Youtube:不良林)
+      - 🇨🇳 中国-329.1KB/s(Youtube:不良林)
+      - 🇭🇰 香港-4.28MB/s(Youtube:不良林)
+      - 🇩🇪 德国-3.25MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.80MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.07MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.55MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
