--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,11 +5,11 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-8.51MB/s(Youtube:不良林), server: 116.129.254.65, port: 63004, type: vmess, uuid: 352ba93c-fd92-3055-ad10-b3599ff2802f, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 116.129.254.65}}
-  - {name: 🇺🇸 美国-5.04MB/s(Youtube:不良林), server: 95.169.4.174, port: 254, type: ss, cipher: aes-256-cfb, password: bwhskrskr06}
-  - {name: 🇮🇳 印度-897.7KB/s(Youtube:不良林), server: jgwhdlb1.gaox.ml, port: 443, type: trojan, password: e05c749b-7c6b-41b8-9c71-9dcf685edf4a, sni: jgwhdlb1.gaox.ml, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-8.92MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 43960, type: vmess, uuid: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /j20-sp1, ws-headers: {Host: pp1.zhengzhongfeizhu.xyz}}
-  - {name: 🇨🇳 中国-329.1KB/s(Youtube:不良林), server: 159.27.90.254, port: 63087, type: vmess, uuid: 352ba93c-fd92-3055-ad10-b3599ff2802f, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /mugua, ws-headers: {Host: 159.27.90.254}}
+  - {name: 🇨🇳 中国-9.04MB/s(Youtube:不良林), server: 36.134.116.212, port: 45392, type: ss, cipher: chacha20-ietf-poly1305, password: 16a6617b-2c13-4473-9f8f-9606c9d9a0d4}
+  - {name: 🇨🇭 瑞士-325.3KB/s(Youtube:不良林), server: ch1.nodegz.top, port: 1400, type: trojan, password: b6f47fcf-6195-38d4-8f49-9e5ccd6bd8f1, sni: ch1.nodegz.top, skip-cert-verify: true}
+  - {name: 🇳🇱 荷兰-3.56MB/s(Youtube:不良林), server: 46.182.107.137, port: 443, type: vmess, uuid: 4ec0ae62-de09-4029-904a-0313d4628ecf, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/290016213035, ws-headers: {Host: 46.182.107.137}}
+  - {name: 🇬🇧 英国-1.59MB/s(Youtube:不良林), server: 178.62.16.161, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇦🇺 澳大利亚-2.60MB/s(Youtube:不良林), server: 185.167.116.250, port: 9006, type: ss, cipher: aes-256-cfb, password: FAdUvMJUq5vDgKEq}
   - {name: 🇭🇰 香港-4.28MB/s(Youtube:不良林), server: 43.129.30.122, port: 12359, type: vmess, uuid: f78921c4-5a97-47ed-db4c-e88b799e6581, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
   - {name: 🇩🇪 德国-3.25MB/s(Youtube:不良林), server: mosaic.marythunt.xyz, port: 443, type: trojan, password: !<str> 372815193, sni: mosaic.marythunt.xyz, skip-cert-verify: true}
   - {name: 🇺🇸 美国-1.80MB/s(Youtube:不良林), server: v04.ssrsub.com, port: 153, type: vmess, uuid: 2df8cb33-de40-438c-840a-5f1d05fe7518, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /api/v3/download.getFile, ws-headers: {Host: v04.ssrsub.com}}
@@ -21,11 +21,11 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-8.51MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.04MB/s(Youtube:不良林)
-      - 🇮🇳 印度-897.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.92MB/s(Youtube:不良林)
-      - 🇨🇳 中国-329.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.04MB/s(Youtube:不良林)
+      - 🇨🇭 瑞士-325.3KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-3.56MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.59MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.60MB/s(Youtube:不良林)
       - 🇭🇰 香港-4.28MB/s(Youtube:不良林)
       - 🇩🇪 德国-3.25MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.80MB/s(Youtube:不良林)
@@ -36,11 +36,11 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-8.51MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.04MB/s(Youtube:不良林)
-      - 🇮🇳 印度-897.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.92MB/s(Youtube:不良林)
-      - 🇨🇳 中国-329.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.04MB/s(Youtube:不良林)
+      - 🇨🇭 瑞士-325.3KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-3.56MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.59MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.60MB/s(Youtube:不良林)
       - 🇭🇰 香港-4.28MB/s(Youtube:不良林)
       - 🇩🇪 德国-3.25MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.80MB/s(Youtube:不良林)
@@ -52,11 +52,11 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-8.51MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.04MB/s(Youtube:不良林)
-      - 🇮🇳 印度-897.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.92MB/s(Youtube:不良林)
-      - 🇨🇳 中国-329.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.04MB/s(Youtube:不良林)
+      - 🇨🇭 瑞士-325.3KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-3.56MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.59MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.60MB/s(Youtube:不良林)
       - 🇭🇰 香港-4.28MB/s(Youtube:不良林)
       - 🇩🇪 德国-3.25MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.80MB/s(Youtube:不良林)
@@ -73,11 +73,11 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-8.51MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.04MB/s(Youtube:不良林)
-      - 🇮🇳 印度-897.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.92MB/s(Youtube:不良林)
-      - 🇨🇳 中国-329.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.04MB/s(Youtube:不良林)
+      - 🇨🇭 瑞士-325.3KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-3.56MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.59MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.60MB/s(Youtube:不良林)
       - 🇭🇰 香港-4.28MB/s(Youtube:不良林)
       - 🇩🇪 德国-3.25MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.80MB/s(Youtube:不良林)
@@ -88,11 +88,11 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-8.51MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.04MB/s(Youtube:不良林)
-      - 🇮🇳 印度-897.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.92MB/s(Youtube:不良林)
-      - 🇨🇳 中国-329.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.04MB/s(Youtube:不良林)
+      - 🇨🇭 瑞士-325.3KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-3.56MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.59MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.60MB/s(Youtube:不良林)
       - 🇭🇰 香港-4.28MB/s(Youtube:不良林)
       - 🇩🇪 德国-3.25MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.80MB/s(Youtube:不良林)
@@ -104,11 +104,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-8.51MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.04MB/s(Youtube:不良林)
-      - 🇮🇳 印度-897.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.92MB/s(Youtube:不良林)
-      - 🇨🇳 中国-329.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.04MB/s(Youtube:不良林)
+      - 🇨🇭 瑞士-325.3KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-3.56MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.59MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.60MB/s(Youtube:不良林)
       - 🇭🇰 香港-4.28MB/s(Youtube:不良林)
       - 🇩🇪 德国-3.25MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.80MB/s(Youtube:不良林)
@@ -129,11 +129,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-8.51MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.04MB/s(Youtube:不良林)
-      - 🇮🇳 印度-897.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.92MB/s(Youtube:不良林)
-      - 🇨🇳 中国-329.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.04MB/s(Youtube:不良林)
+      - 🇨🇭 瑞士-325.3KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-3.56MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.59MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.60MB/s(Youtube:不良林)
       - 🇭🇰 香港-4.28MB/s(Youtube:不良林)
       - 🇩🇪 德国-3.25MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.80MB/s(Youtube:不良林)
