--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,115 +5,114 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-9.04MB/s(Youtube:不良林), server: 36.134.116.212, port: 45392, type: ss, cipher: chacha20-ietf-poly1305, password: 16a6617b-2c13-4473-9f8f-9606c9d9a0d4}
-  - {name: 🇨🇭 瑞士-325.3KB/s(Youtube:不良林), server: ch1.nodegz.top, port: 1400, type: trojan, password: b6f47fcf-6195-38d4-8f49-9e5ccd6bd8f1, sni: ch1.nodegz.top, skip-cert-verify: true}
-  - {name: 🇳🇱 荷兰-3.56MB/s(Youtube:不良林), server: 46.182.107.137, port: 443, type: vmess, uuid: 4ec0ae62-de09-4029-904a-0313d4628ecf, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/290016213035, ws-headers: {Host: 46.182.107.137}}
-  - {name: 🇬🇧 英国-1.59MB/s(Youtube:不良林), server: 178.62.16.161, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇦🇺 澳大利亚-2.60MB/s(Youtube:不良林), server: 185.167.116.250, port: 9006, type: ss, cipher: aes-256-cfb, password: FAdUvMJUq5vDgKEq}
-  - {name: 🇭🇰 香港-4.28MB/s(Youtube:不良林), server: 43.129.30.122, port: 12359, type: vmess, uuid: f78921c4-5a97-47ed-db4c-e88b799e6581, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
   - {name: 🇩🇪 德国-3.25MB/s(Youtube:不良林), server: mosaic.marythunt.xyz, port: 443, type: trojan, password: !<str> 372815193, sni: mosaic.marythunt.xyz, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-1.80MB/s(Youtube:不良林), server: v04.ssrsub.com, port: 153, type: vmess, uuid: 2df8cb33-de40-438c-840a-5f1d05fe7518, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /api/v3/download.getFile, ws-headers: {Host: v04.ssrsub.com}}
+  - {name: 🇦🇺 澳大利亚-2.60MB/s(Youtube:不良林), server: 185.167.116.250, port: 9019, type: ss, cipher: aes-256-cfb, password: GA9KzeEgvfxNrgmM}
+  - {name: 🇺🇸 美国-1.21MB/s(Youtube:不良林), server: azhj001.xiba1.xyz, port: 20720, type: trojan, password: 7497242f-3044-3c77-bf48-14bb26c92a83, sni: azhj001.xiba1.xyz, skip-cert-verify: true}
+  - {name: 🇨🇦 加拿大-2.18MB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇮🇳 印度-897.7KB/s(Youtube:不良林), server: jgwhdlb1.gaox.ml, port: 443, type: trojan, password: e05c749b-7c6b-41b8-9c71-9dcf685edf4a, sni: jgwhdlb1.gaox.ml, skip-cert-verify: true}
   - {name: 🇺🇸 美国-2.07MB/s(Youtube:不良林), server: 150.230.43.106, port: 54829, type: vmess, uuid: f2b5c3ff-86c7-4efa-831f-ff0fcd7656a5, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
   - {name: 🇺🇸 美国-3.55MB/s(Youtube:不良林), server: 20.123.187.212, port: 27931, type: vmess, uuid: 256eae41-0b8f-4faa-bce8-6366011dc19f, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇰🇷 韩国-3.36MB/s(Youtube:不良林), server: kr04.wangxd.life, port: 3052, type: trojan, password: 3a2c0c6c-9ee5-c05f-c951-fcd73831983e, sni: kr04.wangxd.life, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-5.06MB/s(Youtube:不良林), server: bai-piao-wang-zhe10.98848.xyz, port: 22168, type: trojan, password: 685022af-2086-454c-8725-8ff6b6ab1d13, sni: bai-piao-wang-zhe10.98848.xyz, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-5.36MB/s(Youtube:不良林), server: bai-piao-wang-zhe10.98848.xyz, port: 48240, type: trojan, password: 685022af-2086-454c-8725-8ff6b6ab1d13, sni: bai-piao-wang-zhe10.98848.xyz, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-9.04MB/s(Youtube:不良林)
-      - 🇨🇭 瑞士-325.3KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-3.56MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.59MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.60MB/s(Youtube:不良林)
-      - 🇭🇰 香港-4.28MB/s(Youtube:不良林)
       - 🇩🇪 德国-3.25MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.80MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.60MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.21MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.18MB/s(Youtube:不良林)
+      - 🇮🇳 印度-897.7KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.07MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.55MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-3.36MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.06MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.36MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-9.04MB/s(Youtube:不良林)
-      - 🇨🇭 瑞士-325.3KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-3.56MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.59MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.60MB/s(Youtube:不良林)
-      - 🇭🇰 香港-4.28MB/s(Youtube:不良林)
       - 🇩🇪 德国-3.25MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.80MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.60MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.21MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.18MB/s(Youtube:不良林)
+      - 🇮🇳 印度-897.7KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.07MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.55MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-3.36MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.06MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.36MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-9.04MB/s(Youtube:不良林)
-      - 🇨🇭 瑞士-325.3KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-3.56MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.59MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.60MB/s(Youtube:不良林)
-      - 🇭🇰 香港-4.28MB/s(Youtube:不良林)
       - 🇩🇪 德国-3.25MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.80MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.60MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.21MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.18MB/s(Youtube:不良林)
+      - 🇮🇳 印度-897.7KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.07MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.55MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-3.36MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.06MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.36MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 香港-4.28MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-9.04MB/s(Youtube:不良林)
-      - 🇨🇭 瑞士-325.3KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-3.56MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.59MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.60MB/s(Youtube:不良林)
-      - 🇭🇰 香港-4.28MB/s(Youtube:不良林)
       - 🇩🇪 德国-3.25MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.80MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.60MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.21MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.18MB/s(Youtube:不良林)
+      - 🇮🇳 印度-897.7KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.07MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.55MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-3.36MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.06MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.36MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-9.04MB/s(Youtube:不良林)
-      - 🇨🇭 瑞士-325.3KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-3.56MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.59MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.60MB/s(Youtube:不良林)
-      - 🇭🇰 香港-4.28MB/s(Youtube:不良林)
       - 🇩🇪 德国-3.25MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.80MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.60MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.21MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.18MB/s(Youtube:不良林)
+      - 🇮🇳 印度-897.7KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.07MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.55MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-3.36MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.06MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.36MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-9.04MB/s(Youtube:不良林)
-      - 🇨🇭 瑞士-325.3KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-3.56MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.59MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.60MB/s(Youtube:不良林)
-      - 🇭🇰 香港-4.28MB/s(Youtube:不良林)
       - 🇩🇪 德国-3.25MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.80MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.60MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.21MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.18MB/s(Youtube:不良林)
+      - 🇮🇳 印度-897.7KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.07MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.55MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-3.36MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.06MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.36MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-9.04MB/s(Youtube:不良林)
-      - 🇨🇭 瑞士-325.3KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-3.56MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.59MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.60MB/s(Youtube:不良林)
-      - 🇭🇰 香港-4.28MB/s(Youtube:不良林)
       - 🇩🇪 德国-3.25MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.80MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.60MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.21MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.18MB/s(Youtube:不良林)
+      - 🇮🇳 印度-897.7KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.07MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.55MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-3.36MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.06MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.36MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
